<resources>
    <string name="app_name">WellBeing</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="profile">Profile</string>
    <string name="task">Task</string>
    <string name="back_button">This is a back button</string>
    <string name="commentsTV">Comments</string>
    <string name="commentsET">enter comment</string>
    <string name="sendBtn">This send button image view</string>
    <string name="iconIV">This app icon</string>
    <string name="wellbeingTV">WellBeing</string>
    <string name="app_iconIV">app icon</string>
    <string name="shape_1">shape 1</string>
    <string name="shape_2">shape 2</string>
    <string name="shape_3">shape 3</string>
    <string name="shape_4">shape 4</string>
    <string name="messageTV">Welcome Back!</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordET">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="write_about_how_did_you_complete_a_task">write about how did you complete your task..</string>
    <string name="upload_post_image">upload post image</string>
    <string name="uploadIV">image upload button</string>
    <string name="uploadVV">upload video button</string>
    <string name="uploadBtn">upload post button</string>
    <string name="get_image_from_gallary">get image from gallary</string>
    <string name="shape">shape 1</string>
    <string name="shape_22">shape 2</string>
    <string name="shape_33">shape 3</string>
    <string name="shape_44">shape 4</string>
    <string name="register">Register</string>
    <string name="email_address2">Email Address</string>
    <string name="email2">Email</string>
    <string name="your_name">Your Name</string>
    <string name="name">Name</string>
    <string name="password2">Password</string>
    <string name="password22">Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="sign_in2">Sign In</string>
    <string name="congratulation_you_have_completed_your_task">Congratulation You Have completed your task</string>
    <string name="select_new_task">Select new task</string>
    <string name="sorry_time_is_over">Sorry !!! Time is over</string>
    <string name="select_new_task2">Select new task</string>
    <string name="samir_suroshe">Samir Suroshe</string>
    <string name="_10_s">10 s</string>
    <string name="enter_task_time_to_complete">Enter Task Time to complete</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="create_task_image">create task image</string>
    <string name="get_image_from_gallery_btn">get image from gallery btn</string>
    <string name="get_video_from_galley_btn">get video from galley btn</string>
    <string name="upload_task_btn">upload task btn</string>
    <string name="leaderboard2">Leaderboard</string>
    <string name="user_profile_image">User profile image</string>
    <string name="samir_suroshe1">Samir Suroshe</string>
    <string name="email1">Email</string>
    <string name="sameersuroshe_gmail_com">sameersuroshe@gmail.com</string>
    <string name="username">Username</string>
    <string name="samir_suroshe2">Samir Suroshe</string>
    <string name="join_date">Join Date</string>
    <string name="_18_04_2011">18/04/2011</string>
    <string name="_100">100</string>
    <string name="wellpoints">WellPoints</string>
    <string name="_10">10</string>
    <string name="rank">Rank</string>
    <string name="_3">3</string>
    <string name="completed_task">Completed Task</string>
    <string name="_1001">100</string>
    <string name="success_rate">Success Rate</string>
    <string name="title">Task Name</string>
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="this_is_task_reference_image">this is task reference image</string>
    <string name="created_by">Created By</string>
    <string name="timeline_to_complete">Deadline</string>
    <string name="time_left">Time Left</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="next">Next</string>
    <string name="samir_suroshe11">Samir Suroshe</string>
    <string name="_10_s1">10 s</string>
    <string name="post_upload_image">post upload image</string>
    <string name="_101">10</string>
    <string name="_1">10</string>
    <string name="_11">10</string>
    <string name="enter_days">Enter Days</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>