<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_iconIV" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/front_shapes2"
            android:contentDescription="@string/shape_1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/front_shapes"
            android:contentDescription="@string/shape_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/curve_bg"
        android:orientation="vertical"
        android:layout_below="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/front_shapes3"
                android:contentDescription="@string/shape_3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/front_shapes4"
                android:contentDescription="@string/shape_4" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="44dp"
                android:gravity="center"
                android:text="@string/messageTV"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="93dp"
                android:layout_height="21dp"
                android:layout_marginStart="48dp"
                android:text="@string/email_address"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/email_editText"
                android:layout_width="314dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:autofillHints="emailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="93dp"
                android:layout_height="21dp"
                android:layout_marginStart="48dp"
                android:text="@string/password"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/pass_editText"
                android:layout_width="314dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/pass"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/passwordET"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="password" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            android:layout_width="314dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:background="@drawable/profile_btn_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/mov_to_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#C65647"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>