<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginStart="8dp"
            android:id="@+id/user_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/profile_img"
            app:civ_circle_background_color="@color/white"
            app:civ_border_width="1dp"
            android:layout_marginEnd="10dp"
            app:civ_border_color="#FF323131"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/samir_suroshe11"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_10_s1"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:paddingVertical="5dp"
        android:maxLines="5"
        android:text=""
        android:ellipsize="end" >
    </TextView>



    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:layout_below="@+id/description"
        android:contentDescription="@string/post_upload_image" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/post_image">

        <ImageView
            android:id="@+id/like_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            app:tint="?attr/colorOnSurface"
            android:layout_marginStart="25dp"
            android:src="@drawable/like_icon"
            />

        <TextView
            android:id="@+id/like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/_101"
            android:textSize="18sp"
            android:layout_marginStart="5dp"/>

        <ImageView
            android:id="@+id/dislike_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            app:tint="?attr/colorOnSurface"
            android:src="@drawable/dislike_icon"
            android:layout_marginStart="35dp"/>

        <TextView
            android:id="@+id/dislike_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/_1"
            android:textSize="18sp"
            android:layout_marginStart="5dp"/>

        <ImageView
            android:id="@+id/comment_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            app:tint="?attr/colorOnSurface"
            android:src="@drawable/comment_icon"
            android:layout_marginStart="35dp"/>

        <TextView
            android:id="@+id/comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/_11"
            android:textSize="18sp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

</RelativeLayout>